# Optimizer_Chimera

./: .gitignore  AGENTS.md  README.md  pyproject.toml
chimera/: __init__.py
configs/: default.yaml
docs/: colab_quickstart.md  overview.md  release_checklist.md
experiments/: compare_optimizers.py  compare_quant_modes.py  run_cifar_ablation.py  run_optimizer_stress_suite.py  run_smoke.py  train_resnet_cifar.py
paper/: Makefile  README.md  main.tex  refs.bib
paper/tables/: chimera_cifar_smoke_results.csv  chimera_cifar_smoke_summary.csv
scripts/: clean_artifacts.py
src/chimera/: __init__.py  bitconv.py  bitlinear.py  logging_utils.py  optimizer.py  quantization.py  target_bits.py  utils.py
src/chimera/models/: __init__.py  resnet_cifar.py
tests/: test_benchmark_v2.py  test_bitconv.py  test_bitlinear.py  test_compare_optimizers_v10.py  test_imports.py  test_optimizer.py  test_optimizer_robustness.py  test_quantization.py  test_resnet_cifar_v4.py  test_resnet_cifar_v7.py  test_resnet_cifar_v8.py  test_target_bits.py
