[project]
name = "chimera-optimizer"
version = "0.13.0"
description = "Chimera optimizer, effective-bit ResNet benchmark, and optimizer robustness suite."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "pytest",
    "pyyaml",
    "numpy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
